--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@
     
 }
 .card:hover{
-    background-color: wheat;
+    background-color: rgb(231, 114, 18);
 }
 
 .divcontainer{
@@ -140,6 +140,12 @@
     color: black;
     font-size: larger;
 }
+.firstcardtext:hover{
+    color: white;
+}
+.firstextdiv:hover{
+    color: white;
+}
 .firstextdiv{
     display: block;
     padding-top: 55px;
@@ -148,15 +154,68 @@
     color: black;
     font-size: larger;
 }
+.secondcardtext:hover{
+    color: white;
+}
 .secondtextdiv{
     display: block;
     padding-top: 55px;
+}
+.secondtextdiv:hover{
+    color: white;
 }
 .thirdcardtext{
     color: black;
     font-size: larger;
 }
+.thirdcardtext:hover{
+    color: white;
+}
 .thirdtextdiv{
     display: block;
     padding-top: 55px;
+}
+.thirdtextdiv:hover{
+    color: white;
+}
+.clientext{
+    color: rgb(231, 114, 18);
+    font-size: 30px;
+    padding-top: 100px;
+}
+.clientdiv{
+    width: 100%;
+    height: 130px;
+    background-color: lightslategray;
+    padding-top: 20px;
+}
+.imgdiv{
+    display: flex;
+    margin-left: 30px;
+    padding-left: 50px;
+}
+.tm{
+    width: 60px;
+    height: 50px;
+}
+.rs{
+    width: 60px;
+    height: 50px;
+}
+.mega{
+    width: 60px;
+    height: 50px;
+}
+.novaji{
+    width: 60px;
+    height: 50px;
+}
+.kodobe{
+    width: 60px;
+    height: 50px;
+}
+.contact{
+    color: rgb(231, 114, 18);
+    font-size: 30px;
+    padding-top: 100px;
 }
