--- a/style.css
+++ b/style.css
@@ -192,30 +192,83 @@
 .imgdiv{
     display: flex;
     margin-left: 30px;
-    padding-left: 50px;
+    padding-left: 230px;
+    margin-top: 15px;
 }
 .tm{
-    width: 60px;
-    height: 50px;
+    width: 70px;
+    height: 30px;
+   
 }
 .rs{
-    width: 60px;
-    height: 50px;
+    width: 140px;
+    height: 40px;
+    margin-left: 40px;
 }
 .mega{
-    width: 60px;
-    height: 50px;
+    width: 80px;
+    height: 30px;
+    margin-left: 40px;
 }
 .novaji{
-    width: 60px;
-    height: 50px;
+    width: 100px;
+    height: 30px;
+    margin-left: 40px;
 }
 .kodobe{
+    width: 80px;
+    height: 30px;
+    margin-left: 40px;
+}
+.elogo{
+    margin-left: 40px;
     width: 60px;
     height: 50px;
+   
 }
-.contact{
+.contact1{
     color: rgb(231, 114, 18);
     font-size: 30px;
     padding-top: 100px;
+}
+.cardiv{
+    display: flex;
+    margin-left: 89px;
+}
+.card1{
+    height: 240px;
+    width: 300px;
+    box-shadow: red;
+    border-radius: 10px;
+    background-color: whitesmoke;
+    margin-left: 40px;
+    margin-top:40px;
+    padding-left: 30px;
+    
+}
+.contactext{
+    display: block;
+    
+}
+.addressheader{
+    color: grey;
+    font-weight: bold;
+    margin-top: 100px;
+}
+.address{
+    color: black;   
+}
+.emailtext{
+    color:rgb(231, 114, 18) ;
+    font-size: 17px;
+}
+.numbertext{
+    color: rgb(231, 114, 18);
+    font-size: 17px;
+}
+.footer{
+    width: 100%;
+    height: 300px;
+    margin-top: 40px;
+    
 }
