--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     height: 40px;
     width: 100%;
 }
-.body{
+.whole{
     margin: 0;
     padding: 0;
 }
@@ -102,12 +102,14 @@
     border-color: rgb(231, 114, 18);
 }
 .aboutdiv{
-    padding-top: 40px;
+    padding-top: 75px;
     display: block;
+    margin-left: 360px;
 }
 .about1{
     color:rgb(231, 114, 18);
     font-size: 35px;
+    margin-left: 190px;
 }
 .aboutext{
     color: grey;
@@ -115,12 +117,14 @@
 }
 .servicetext{
     color:rgb(231, 114, 18) ;
-    padding-top: 90px
+    padding-top: 90px;
+    margin-left: 538px;
 }
+
 .card{
     height: 330px;
     width: 300px;
-    box-shadow: red;
+    
     border-radius: 10px;
     background-color: whitesmoke;
     margin-left: 40px;
@@ -182,6 +186,7 @@
     color: rgb(231, 114, 18);
     font-size: 30px;
     padding-top: 100px;
+    margin-left: 510px;
 }
 .clientdiv{
     width: 100%;
@@ -230,6 +235,7 @@
     color: rgb(231, 114, 18);
     font-size: 30px;
     padding-top: 100px;
+    margin-left: 580px;
 }
 .cardiv{
     display: flex;
@@ -238,34 +244,57 @@
 .card1{
     height: 240px;
     width: 300px;
-    box-shadow: red;
     border-radius: 10px;
     background-color: whitesmoke;
     margin-left: 40px;
     margin-top:40px;
     padding-left: 30px;
-    
-}
-.contactext{
     display: block;
     
 }
+
 .addressheader{
     color: grey;
     font-weight: bold;
-    margin-top: 100px;
+    margin-left: 74px;  
 }
 .address{
-    color: black;   
+    color: black; 
+    margin-left: 10px;    
+}
+.imageaddressdiv{
+    margin-top: 40px ;
+    margin-left: 94px;
+}
+.emailheader{
+    color: grey;
+    font-weight: bold;
+    margin-left: 80px;  
 }
 .emailtext{
     color:rgb(231, 114, 18) ;
     font-size: 17px;
+    margin-left: 55px;
+}
+.imagemaildiv{
+    margin-top: 40px ;
+    margin-left: -8px;
+}
+.imagecalldiv{
+    margin-top: 40px ;
+    margin-left: -8px;
+}
+.callheader{
+    color: grey;
+    font-weight: bold;
+    margin-left: 80px;  
 }
 .numbertext{
     color: rgb(231, 114, 18);
     font-size: 17px;
+    margin-left: 55px;
 }
+
 .footer{
     width: 100%;
     height: 300px;
@@ -312,4 +341,14 @@
 }
 .social{
     padding-left: 100px;
+}
+
+.message{
+    margin-left: 110px;
+}
+.call{
+    margin-left: 110px;
+}
+.addresstext{
+    margin-bottom: 250px;
 }
